--- a/Freelancer-s-Web/Pages/PostPage/Finish.cshtml
+++ b/Freelancer-s-Web/Pages/PostPage/Finish.cshtml
@@ -1,13 +1,13 @@
 ﻿@page
-@model Freelancer_s_Web.Pages.PostPage.DeleteModel
+@model Freelancer_s_Web.Pages.PostPage.FinishModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Finish";
 }
 
-<h1>Delete</h1>
+<h1>Finish</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to finish this post?</h3>
 <div>
     <h4>Post</h4>
     <hr />
@@ -44,8 +44,8 @@
         </dd>
     </dl>
     
-    <form method="post">
-        <input type="hidden" asp-for="Post.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+    <form method="post" asp-page-handler="Finish">
+        <input type="hidden" value="@Model.Post.Id" name="id"/>
+        <input type="submit" value="Finish" class="btn" />
     </form>
 </div>
