--- a/Freelancer-s-Web/Pages/ReportPage/Index.cshtml
+++ b/Freelancer-s-Web/Pages/ReportPage/Index.cshtml
@@ -8,10 +8,10 @@
 <h1>Report Management</h1>
 <div class="row">
     <div class="col-sm-4 mb-4">
-        <input type="text" id="myFilter" class="form-control" onkeyup="myFunction()" placeholder="Search reporter or reportee...">
+        <input type="text" id="searchBox" class="form-control" onkeyup="myFunction()" placeholder="Search reporter or reportee...">
     </div>
 </div>
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th>
@@ -28,37 +28,63 @@
     </thead>
     <tbody id="myProducts">
 @foreach (var item in Model.Report) {
-        <tr class="table">
-            <td class="title" >
-                <a class="text-danger" asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.Reportee.Id">@Html.DisplayFor(modelItem => item.Reportee.Email)</a> 
+        <tr class="header">
+            
+            <td class="title">
+                <a class="text-danger" asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.Reportee.Id">@Html.DisplayFor(modelItem => item.Reportee.Email)</a>
             </td>
             <td class="title">
-                <a asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.Reporter.Id">@Html.DisplayFor(modelItem => item.Reporter.Email)</a> 
+                <a asp-area="" asp-page="/Profile/Index" asp-page-handler="Detail" asp-route-id="@item.Reporter.Id">@Html.DisplayFor(modelItem => item.Reporter.Email)</a>
             </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.Comment)
             </td>
             <td>
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> 
+                <a asp-page="./Details" asp-route-id="@item.Id">Details</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
 <script>
-    function myFunction() {
-        var input, filter, cards, cardContainer, title, i;
-        input = document.getElementById("myFilter");
-        filter = input.value.toUpperCase();
-        cardContainer = document.getElementById("myProducts");
-        cards = cardContainer.getElementsByClassName("table");
-        for (i = 0; i < cards.length; i++) {
-            title = cards[i].querySelector(".title");
-            if (title.innerText.toUpperCase().indexOf(filter) > -1) {
-                cards[i].style.display = "";
-            } else {
-                cards[i].style.display = "none";
+    function performSearch() {
+
+        // Declare search string 
+        var filter = searchBox.value.toUpperCase();
+
+        // Loop through first tbody's rows
+        for (var rowI = 0; rowI < trs.length; rowI++) {
+
+            // define the row's cells
+            var tds = trs[rowI].getElementsByTagName("td");
+
+            // hide the row
+            trs[rowI].style.display = "none";
+
+            // loop through row cells
+            for (var cellI = 0; cellI < 2; cellI++) {
+
+                // if there's a match
+                if (tds[cellI].innerHTML.toUpperCase().indexOf(filter) > -1) {
+
+                    // show the row
+                    trs[rowI].style.display = "";
+
+                    // skip to the next row
+                    continue;
+
+                }
             }
         }
+
     }
+
+    // declare elements
+    const searchBox = document.getElementById('searchBox');
+    const table = document.getElementById("myTable");
+    const trs = table.tBodies[0].getElementsByTagName("tr");
+
+    // add event listener to search box
+    searchBox.addEventListener('keyup', performSearch);
 </script>
